examples/errors/redefine.xpln
fun foo(a)
    return a;
endf;

fun foo(a)
    return a + a;
endf;

fun bar(a, a)
    return a + a;
endf;

z := foo(1);
output z;
return 0;
